# artifacts/api-server/src/routes/index.ts
@@ -1,7 +1,6 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import shopsRouter from "./shops";
-import customersRouter from "./customers";
 import productsRouter from "./products";
 import emiOrdersRouter from "./emiOrders";
 import dashboardRouter from "./dashboard";
@@ -10,7 +9,6 @@ const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(shopsRouter);
-router.use(customersRouter);
 router.use(productsRouter);
 router.use(emiOrdersRouter);
 router.use(dashboardRouter);
